crates/jarl-cli/tests/integration/snapshots/integration__output_format__with_parsing_error-3.snap
---
source: crates/jarl-cli/tests/integration/output_format.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--output-format\").arg(\"json\").run().normalize_os_executable_name()"
---
success: false
exit_code: 255
----- stdout -----
[
  {
    "message": {
      "name": "any_is_na",
      "body": "`any(is.na(...))` is inefficient.",
      "suggestion": "Use `anyNA(...)` instead."
    },
    "filename": "test.R",
    "range": [
      0,
      13
    ],
    "location": {
      "row": 1,
      "column": 0
    },
    "fix": {
      "content": "anyNA(x)",
      "start": 0,
      "end": 13,
      "to_skip": false
    }
  }
]
----- stderr -----

----- args -----
check . --output-format json
