crates/jarl-cli/tests/integration/snapshots/integration__output_format__with_parsing_error-4.snap
---
source: crates/jarl-cli/tests/integration/output_format.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--output-format\").arg(\"github\").run().normalize_os_executable_name()"
---
success: false
exit_code: 255
----- stdout -----
::warning file=test.R,line=1,col=1::[any_is_na] `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.

----- stderr -----

----- args -----
check . --output-format github
